<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:paddingHorizontal="40dp">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/hello"
        android:layout_gravity="center_horizontal"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"
        />

    <Button
        android:layout_width="219dp"
        android:layout_height="33dp"
        android:background="@drawable/round_button"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_gravity="center_horizontal"

</LinearLayout>